--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,8 @@
     "require": {
         "php": "^7.4",
         "amphp/amp": "^2.2.0",
-        "amphp/http-client": "^v4.0.0-rc4",
         "amphp/log": "^1.0",
-        "async-bot/core": "dev-master",
-        "daverandom/exceptional-json": "^1.0",
-        "opis/json-schema": "^1.0"
+        "async-bot/core": "dev-master"
     },
     "require-dev": {
         "infection/infection": "^0.13.4",
